new routes statisitics handler